# _ETL_pipeline

./: Dockerfile  README.md  pyproject.toml
app/: main.py  router.py  schemas.py
